--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 
 <head>
     <meta charset=utf-8/>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>ic-06</title>
 </head>
 
 
+
 <body>
+
+    <h1>JavaScript Part 2</h1>
+
+    <svg id = "frame">
+        <circle id = "max" cx = "490" cy = "10" r = "10"/>
+
+    </svg>
 
 
 </body>
